0.1663
    - added bind_param_option can set bind_param option
      to insert(), update(), delete(), select(), insert_at(),
      update_at(), delete_at(), select_at(), delete_all(), update_all()
0.1662
    - removed EXPERIMENTAL DBIx::Custom::Model column_clause
    - added EXPERIMENTAL column()
    - added EXPERIMENTAL mycolumn()
0.1661
    - added EXPERIMENTAL DBIx::Custom::Model table_alias attribute
    - added EXPERIMENTAL DBIx::Custom::Model mycolumn()
    - added EXPERIMENTAL DBIx::Custom::Model column()
    - fixed autoloading bug
    - added EXPERIMETNAL select() prepend table option
    - added EXPERIMETNAL select() column table option
    - added EXPERIMETNAL select() column all option
    - removed EXPERIMETNAL select() all_column option
    - removed EXPERIMENTAL view()
0.1660
    - added EXPERIMENTAL DBIx::Custom::Model view()
    - added EXPERIMENTAL view()
    - DBIx::Custom::Model inherit DBIx::Custom
    - removed EXPERIMETNAL DBIx::Custom::Model method()
    - added table choice feature to select() EXPERIMENTAL all_column option 
    - removed EXPERIMENTAL DBIx::Custom::Model column attribute for side effect
0.1659
    - EXPERIMETAL fork safety implementaion.
    - removed EXPERIMENTAL selection
    - added select() all_column option
0.1658
    - added EXPERIMENTAL DBIx::Custom::Model column() prefix option.
    - fixed select_at join column invalid bug
    - added DBIx::Custom::Model column() attribute 
0.1657
    - remaned EXPERIMENTAL safty_charcter to safty_name
    - safty_charcter is changed, set only one character regex.
0.1656
    - fixed some select() join opition bug
0.1655
    - added EXPERIMENTAL DBIx::Custom::Model join attribute
    - added EXPERIMENTAL select() join option
    - deprecated select() relation option
    - added EXPERIMENTAL update_param and insert_param
    - remove EXPERIMENTAL DBIx::Custom::Model relation
0.1654
    - selection can contain where clause.
0.1653