@@ -5,7 +5,7 @@ use warnings;
 
 use base 'MyModel5';
 
-__PACKAGE__->attr(table => 'table1');
+__PACKAGE__->attr(table => 'table2');
 
 __PACKAGE__->attr('primary_key' => sub { ['key1', 'key2'] });
 
